# SummIT

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  wsgi.py
.github/workflows/: python-app.yml
documentation/: er.puml
project/: __init__.py  auth.py  main.py
project/templates/: admin.html  base.html  denied.html  doc.html  index.html  login.html  logout.html  profile.html
