[project]
name = "summit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.5",
    "db>=0.1.1",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
